test/error/E19.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": [
		{
			"type": "lang:if",
			"data": {},
			"location": [2, 2]
		}
	],
	"connections": [
		{
			"type": "exec",
			"input": [0, 0],
			"output": {}
		}
	]
}
